130.md: updated text in bottomSections

--- a/content/pages/blog/130.md
+++ b/content/pages/blog/130.md
@@ -32,13 +32,31 @@ bottomSections:
     variant: variant-a
     title: The Section Title
     subtitle: The section subtitle
-    text: >-
-      Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
-      doloremque laudantium, totam rem aperiam. Eaque ipsa quae ab illo
-      inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
-      Sed ut perspiciatis undeomnis iste natus error sit voluptatem accusantium
-      doloremque laudantium, totam rem aperiam. Eaque ipsa quae ab illo
-      inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
+    text: >+
+      Eén van de grootste punten van de PVV, VVD, NSC en BBB was het terug
+      verhogen van de maximumsnelheid naar 130 km/h. En dat is ‘’gelukt’’, op
+      maar liefst 3 plekken gaat de snelheid naar 130 km/h.
+
+
+
+
+      Origineel waren ze aan het kijken naar 4 trajecten, 3 hiervan bleken
+      echter geschikt. Het gaat om de volgende trajecten: de A7-Afsluitdijk,
+      tussen Stevinsluizen en Lorentzsluizen, de A7 tussen de aansluiting
+      Winschoten en de grens met Duitsland, en de A6 tussen Lelystad-Noord en de
+      Ketelbrug.
+
+
+
+
+      Het zijn echt de minst gebruikte trajecten van het land, en ook erg kort.
+      De kortste is slechts 12 km. Het is ongeveer 2-3% van de Nederlandse
+      snelwegen waar we vanaf volgend jaar weer 130 mogen rijden, erg effectief
+      dus!
+
+
+
+
     elementId: ''
     styles:
       self:
