130.md: updated title in bottomSections

--- a/content/pages/blog/130.md
+++ b/content/pages/blog/130.md
@@ -30,7 +30,7 @@ bottomSections:
   - type: TextSection
     colors: colors-f
     variant: variant-a
-    title: The Section Title
+    title: Maximum snelheid terug naar 130km/h
     subtitle: The section subtitle
     text: >+
       Eén van de grootste punten van de PVV, VVD, NSC en BBB was het terug
