130.md: updated subtitle in bottomSections

--- a/content/pages/blog/130.md
+++ b/content/pages/blog/130.md
@@ -31,7 +31,7 @@ bottomSections:
     colors: colors-f
     variant: variant-a
     title: Maximum snelheid terug naar 130km/h
-    subtitle: The section subtitle
+    subtitle: Tenminste...
     text: >+
       Eén van de grootste punten van de PVV, VVD, NSC en BBB was het terug
       verhogen van de maximumsnelheid naar 130 km/h. En dat is ‘’gelukt’’, op
