130.md: updated excerpt

--- a/content/pages/blog/130.md
+++ b/content/pages/blog/130.md
@@ -2,9 +2,7 @@
 type: PostLayout
 title: 'Maximum snelheid terug naar 130km/h, tenminste...'
 date: '2025-03-06'
-excerpt: >-
-  Nunc rutrum felis dui, ut consequat sapien scelerisque vel. Integer
-  condimentum dignissim justo vel faucibus.
+excerpt: 'Op een heuze 3 trajecten weer 130km/h, chapeau'
 featuredImage:
   type: ImageBlock
   url: /images/images.webp
